<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <TextView
        android:id="@+id/tv_label_actors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_actors"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/tv_movie_actors"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/tv_label_actors"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="4dp"
        tools:text="@string/actors"
        />

    <TextView
        android:id="@+id/tv_label_director"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_director"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_movie_actors"
        android:layout_marginTop="8dp"
        />

    <TextView
        android:id="@+id/tv_movie_director"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/tv_label_director"
        app:layout_constraintTop_toBottomOf="@id/tv_movie_actors"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="4dp"
        />

    <TextView
        android:id="@+id/tv_label_writer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_writer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_movie_director"
        android:layout_marginTop="8dp"
        />

    <TextView
        android:id="@+id/tv_movie_writer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/tv_label_writer"
        app:layout_constraintTop_toBottomOf="@id/tv_movie_director"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="4dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>